# deepthon

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
examples/: circles_classification.py  diabetes_regression.py  mnist_multiclass_classification.py  practice.ipynb
src/deepthon/: __init__.py
src/deepthon/data/: dataloader.py
src/deepthon/nn/: __init__.py  activations.py  base.py  layers.py  losses.py  neuron.py  optimizers.py  schedulers.py
src/deepthon/pipeline/: checkpoints.py  dataloaders.py  trainer.py
src/deepthon/utils/: __init__.py  io.py  metrics.py  split.py
src/nnlib/: __init__.py  activations.py  base.py  layer  layer.py  loss.py  neuron.py  optimization.py  optimizers.py  schedulers.py
src/pipeline/: trainer.py
src/utils/: __init__.py  metrics.py  split.py
tests/: conftest.py  readme_code_test.py  test_io.py  test_layers.py  test_metrics.py  test_neuron.py  test_trainer.py
